@@ -1,0 +1,14 @@
+<h1>PSY的魔咒？P Nation旗下明星失去光芒</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/C-MeVIK6h8g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>近年來，許多K-pop榜單上的冠軍歌手加入了朴載範（Psy）的P Nation娛樂公司，但他們卻難以重現過往的成功。音樂評論家指出，朴載範對旗下藝人的音樂製作過度干預，以及目前音樂市場的趨勢轉變，導致這些明星失去光芒。</p>
+<p>P Nation是一家由朴載範在2018年離開YG娛樂後創立的小型娛樂公司，由於朴載範的全球知名度，這家公司迅速引起了關注。公司旗下簽約了多位大牌K-pop藝人，包括潔西（Jessi）、泫雅（HyunA）、헤이즈（Heize）和華莎（Hwasa）等。這些藝人以其獨特的風格和表演而聞名，曾經在當地音樂榜單上名列前茅。然而，自從加入P Nation後，他們大多數人都未能重現過往的成功。</p>
+<p>只有潔西在P Nation取得了新的職業生涯高峰，她的2020年單曲《Nunu Nana》在Gaon音樂榜上排名第二。但她的下一首歌《What Type of X》在2021年發行時，僅排名第七。其他藝人也未能取得過往的成功。</p>
+<p>流行文化評論家金度勳（Kim Do-heon）認為，P Nation未能有效地製作出凸顯每位藝人個性的音樂。</p>
+<p>以華莎為例，她在RBW旗下的前兩首歌《Twit》（2019）和《Maria》（2020）曾經在Gaon音樂榜上排名第一和第六，但她在P Nation旗下的最近兩首歌《I Love My Body》和《NA》僅能進入Gaon音樂榜的前十名，在全球iTunes榜上表現平平。</p>
+<p>金度勳評論道：“華莎的《NA》一開始是一首在英國可能會很受歡迎的house曲，但突然轉變成類似朴載範風格的音樂。老實說，這種轉變不太合適。”他認為，朴載範的風格在現場表演中很有效，特別是在他的“Summer Swag”演唱會中，但可能不適合每位藝人。</p>
+<p>在2022年7月20日的《Radio Star》節目中，潔西透露朴載範曾試圖淡化她的大膽和激情形象，鼓勵她採用更主流的風格。</p>
+<p>“他希望我變得更柔和，但那不是我，”潔西在節目中說。<h2>P Nation旗下藝人掙扎的原因</h2></p>
+<p>泫雅在2021年發行的歌曲《I’m Cool》在Gaon音樂榜上排名第四，但她在P Nation旗下的其他歌曲，如《Flower Shower》和《Ping Pong》，未能取得相同的認可。</p><p>泫雅在2020年8月的《Radio Star》節目中分享了類似的經歷，她回憶朴載範曾建議她修改舞蹈動作，使其更精緻和同步，這與她的自由奔放的舞蹈風格不同。</p><p>曾經以《Star》（2016）、《You, Clouds, Rain》（2017）和《Jenga》（2018）等歌曲稱霸榜單的饒舌歌手和R&B歌手헤이즈，也在P Nation旗下掙扎著未能取得過往的成功。她的最近歌曲《Happen》和《Undo》未能重現她過往的成就。</p><h3>音樂評論家的看法</h3><p>音樂評論家林熙允（Lim Hee-yun）認為，K-pop市場的趨勢轉變是大牌獨唱歌手掙扎的原因之一。</p><blockquote>“P Nation旗下的許多藝人都是舞蹈導向的獨唱歌手，但在過去兩三年中，獨唱歌手很難對國內音樂榜單產生重大影響，”林熙允評論道。</blockquote><p>“即使是Sistar的孝琳（Hyolyn），她曾經引起很大的轟動，但她的最近歌曲也未能取得很大的成功，”林熙允補充道。</p><h2>朴載範的魔咒？P Nation旗下明星失去光芒</h2><p>P Nation拒絕就此事發表評論。</p>
+<p>據悉，潔西在2022年7月合約到期後離開了P Nation，表示她正在尋找新的機會。泫雅也在2022年8月與前男友Dawn一起離開了朴載範的經紀公司，在合約結束後，表示希望尋求新的挑戰和藝術方向。</p>
