@@ -11,3 +11,4 @@ https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-koenji-
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-sunflowers-hakone-festival-and-bon-odori/
 https://www.koreaherald.com/view.php?ud=20240930050684
 https://www.koreaherald.com/view.php?ud=20240930050646
+https://www.koreaherald.com/view.php?ud=20240930050525
